--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Ashwat Chidambaram</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -41,13 +41,19 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+							<h2>Hi, I'm Ashwat!</h2>
+							<p>avid computer scientist<br />
+							aviation enthusiast<br />
+							UC Berkeley, EECS</p>
+							<ul class="icons">
+								<li><a href="#" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
+								<li><a href="https://github.com/ashwatc" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ashchid/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:ashwatc@berkeley.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
+							<!-- <ul class="actions special">
+								<li><a href="#" class="button primary">Activate</a></li>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
