modified entire front page, added content and details for sections

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">Projects</a></li>
+											<li><a href="elements.html">Experience</a></li>
+											<li><a href="elements.html">About Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -62,14 +61,17 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
+								eget augue amet aliquet nisl cep donec</h2> -->
+								<h2>In case we haven't met before...</h2>
+								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a second-year<br/>
+								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
+								I am extremeley passionate about the fields of computer science and engsineering,<br/>
+								and deeply interested in the applications of robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-microchip major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon solid fa-plane-departure major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
@@ -78,24 +80,25 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/sms.png" alt="" /></div><div class="content">
+								<h2>Personal Projects</h2>
+								<p>I love working on personal projects in my freetime, both individually and in a group with my friends. 
+									Click here to see some of my (and our) latest creations.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/lm.jpg" alt="" /></div><div class="content">
+								<h2>Work Experience</h2>
+								<p>Nothing is better than having the chance to apply all your skills and contribute to something big. 
+									Here are some of the projects I worked on in past internships.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pfp.jpg" alt="" /></div><div class="content">
+								<h2>About Me</h2>
+								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
+									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
+									international relations and global affairs. Here's a little more about me and my life.</p>
 							</div>
 						</section>
 					</section>
