--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Ashwat Chidambaram</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,9 +27,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Projects</a></li>
-											<li><a href="elements.html">Experience</a></li>
-											<li><a href="elements.html">About Me</a></li>
+											<li><a href="projects.html">Projects</a></li>
+											<li><a href="experience.html">Experience</a></li>
+											<li><a href="about.html">About Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -45,10 +45,10 @@
 							aviation enthusiast<br />
 							UC Berkeley, EECS</p>
 							<ul class="icons">
-								<li><a href="#" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
-								<li><a href="https://github.com/ashwatc" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/ashchid/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:ashwatc@berkeley.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
+								<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<!-- <ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
@@ -93,8 +93,8 @@
 									Here are some of the tasks and projects that I worked on during my past internship experiences.</p>
 							</div>
 						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pfp.jpg" alt="" /></div><div class="content">
+						<section class="spotlight">  
+							<div class="image"><img src="images/pfp3.jpg" alt="" /></div><div class="content">
 								<h2>About Me</h2>
 								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
 									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
@@ -157,14 +157,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Ashwat Chidambaram</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
