added personal projects to the section, with descriptions and links

--- a/projects.html
+++ b/projects.html
@@ -47,18 +47,42 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+                                <section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
+                                        <h2>Speech Matrix Solver</h2>
+                                        <p>
+                                            Speech Matrix Solver is a web application my friends and I built in order to solve complex systems of equations by performing Gaussian Elimination on an augmented matrix that is verbally dictated by the user. 
+                                            Both the Gaussian Elimination backend and Web Interface frontend aspects were built using JavaScript, CSS, and HTML5 (utilizing the HTML5 Speech Recognition API).
+                                        </p>
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+                                        <a href="https://github.com/ashwatc/SpeechMatrixSolver" target="_blank" class="button primary fit">GitHub Repository</a>
+                                    </div>
+                                </section>
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+                                <br/>
+                                <br/>
 
-								<hr />
+                                <hr/>
 
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
 
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
+                                <br/>
+                                <br/>
+
+                                <section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/storefront.png" alt="" /></div><div class="content">
+                                        <h2>StoreFront</h2>
+                                        <p>StoreFront is an digital platform that provides small businesses with the opportunity to easily create an online presence in their local communities, 
+                                            and continue selling products to customers in order to stay afloat during the COVID-19 pandemic.
+
+                                            This project was submitted to the COVID-19 Design Challenge, hosted by the Jacobs Institute of Design Innovation at UC Berkeley.
+                                        </p>
+
+                                        <a href="https://drive.google.com/drive/folders/1-Fl93KvqoYzaufQkWfOkkmXbYk2hEl4n?usp=sharing" target="_blank" class="button primary fit">Presentation and Write-Up</a>
+                                    </div>
+                                </section>
+
+                                <br/>
+                                <br/>
 
 							</div>
 						</section>
