--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h2>In case we haven't met before...</h2>
 								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a second-year<br/>
 								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
-								I am extremeley passionate about the fields of computer science and engsineering,<br/>
+								I am extremeley passionate about the fields of computer science and engineering,<br/>
 								and deeply interested in the applications of robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
@@ -80,7 +80,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/sms.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
 								<h2>Personal Projects</h2>
 								<p>I love working on personal projects in my freetime, both individually and in a group with my friends. 
 									Click here to see some of my (and our) latest creations, as well as links to our projects and codebase behind it all.</p>
