added clickable text and images from landing page

--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
-								<h2>Personal Projects</h2>
+							<div class="image"><a href="projects.html"><img src="images/projects/sms.png" alt="" /></a></div><div class="content">
+								<h2><a href="projects.html">Personal Projects</a></h2>
 								<p>I love working on personal projects in my freetime, both individually and in a group with my friends. 
 									Click here to see some of my (and our) latest creations, as well as links to our projects and codebase behind it all.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/lm.jpg" alt="" /></div><div class="content">
-								<h2>Work Experience</h2>
+							<div class="image"><a href="experience.html"><img src="images/lm.jpg" alt="" /></a></div><div class="content">
+								<h2><a href="experience.html">Work Experience</a></h2>
 								<p>Nothing is better than being given the chance to apply all your skills to contribute towards something big. 
 									Here are some of the tasks and projects that I worked on during my past internship experiences.</p>
 							</div>
 						</section>
 						<section class="spotlight">  
-							<div class="image"><img src="images/pfp3.jpg" alt="" /></div><div class="content">
-								<h2>About Me</h2>
+							<div class="image"><a href="about.html"><img src="images/pfp3.jpg" alt="" /></a></div><div class="content">
+								<h2><a href="about.html">About Me</a></h2>
 								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
 									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
 									international relations and global affairs. Here's a little more about me.</p>
