reorganized image assets into folders, changed code accordingly elsewhere

--- a/experience.html
+++ b/experience.html
@@ -47,6 +47,28 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
+								<section class="spotlight" style='background-color: #ffffff;'></section>
+								
+								<section class="spotlight" style='background-color: #ffffff;'>
+                                    <div class="image"><img src="images/projects/sms.png" alt="" /></div><div class="content">
+                                        <h2>Lockheed Martin Space Systems</h2>
+                                        <p>
+                                            Speech Matrix Solver is a web application my friends and I built in order to solve complex systems of equations by performing Gaussian Elimination on an augmented matrix that is verbally dictated by the user. 
+                                            Both the Gaussian Elimination backend and Web Interface frontend aspects were built using JavaScript, CSS, and HTML5 (utilizing the HTML5 Speech Recognition API).
+                                        </p>
+
+                                        <a href="https://github.com/ashwatc/SpeechMatrixSolver" target="_blank" class="button primary fit">GitHub Repository</a>
+                                    </div>
+								</section>
+								
+								<br/>
+                                <br/>
+
+                                <hr/>
+
+                                <br/>
+                                <br/>
+
 								<h3>Lorem ipsum dolor</h3>
 								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
 
