--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="experience.html"><img src="images/lm.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="experience.html"><img src="images/companies/lm.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="experience.html">Work Experience</a></h2>
 								<p>Nothing is better than being given the chance to apply all your skills to contribute towards something big. 
 									Here are some of the tasks and projects that I worked on during my past internship experiences.</p>
 							</div>
 						</section>
 						<section class="spotlight">  
-							<div class="image"><a href="about.html"><img src="images/pfp3.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="about.html"><img src="images/profilepics/pfp3.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="about.html">About Me</a></h2>
 								<p>A solo-certified student pilot, and Eagle Scout with Three Golden Palms. A hobbyist drummer since the age of 8,
 									with a love for the intricate craft of origami. A budding electrical engineer and computer scientist, interested in
