updated font sizes on experience.html

--- a/experience.html
+++ b/experience.html
@@ -51,7 +51,7 @@
 								
 								<section class="spotlight" style='background-color: #ffffff;'>
                                     <div class="image"><img src="images/companies/lmspace.jpg" height="350" alt="" /></div><div class="content">
-										<h2 style="font-size:27px !important;">Lockheed Martin: Space Systems</h2>
+										<h2 style="font-size:22px !important;">Lockheed Martin: <br/> Space Systems</h2>
 										<h4><strong><i>Machine Learning and Computer Vision Intern (June - August 2020)</i></strong></h4>
                                         <p>
                                             Incoming intern at Lockheed Martin Space Systems, interfacing with flight hardware and solar array.
@@ -73,7 +73,7 @@
 											<h2 style="font-size:27px !important;">Lockheed Martin: Space Systems</h2>
 											<p>Summer 2019: Software Engineering Intern</p>
 										</header> -->
-										<h2 style="font-size:21px">Lockheed Martin: <br/> Enterprise Business Services</h2>
+										<h2 style="font-size:21px !important;">Lockheed Martin: <br/> Enterprise Business Services</h2>
 										<h4><strong><i>Software Engineering Intern <br/> (June - August 2019)</i></strong></h4>
                                         <p>
 											Developed an application that allows authenticated Lockheed Martin employees to keep track of LM specific projects, 
