--- a/about.html
+++ b/about.html
@@ -43,21 +43,65 @@
 							<h2>About Me</h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
+
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+								<span class="image left"><img src="images/profilepics/pfp3.jpg" alt="" /></span>
+									
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+								<h3>Ashwat Chidambaram</h3>
+								<p>Born and raised a California native, I'm currently a student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS) as a Regents' and Chancellor's Scholar.
+									I'm constantly exploring new ways to learn anything and everything I can, and ways I can apply those skills to build cool and purposeful things to use.
+									I have a deep interest in pursuing a path which allows me to combine my passions for both software and hardware together, particularly delving into the field of autonomous systems 
+									in order to build safe, reliable, and innovative robotics in the future which will empower humanity. In addition, I have a lot of passions beyond the field of tech, which you can read about below!
+								</p>
 
-								<hr />
+								<!-- Ever since a young age I've always been interested in the field of aviation. From flying wind-up toy balsawood planes in 5th grade, to flying real Cessna-172s during high school, 
+									this passion grew with me. As I began to teach myself how to code in high school, I instantly knew that I wanted to pursue a path in life which would allow me to combine my love for both 
+									software and hardware aspects of engineering, focusing on autonomous ground and aerial vehicles. -->
 
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+								<hr/>
 
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
+								<h3>Organizations</h3>
+								<p>Being a key part of something bigger than myself has always been one of the important things in my life. Here are a few organizations I am extremely fortunate to be a part of 
+									during my time at UC Berkeley, due to the amazing experiences I have in them and the truly phenomenal people I get to meet along the way.</p>
+							</div>
+						</section>
 
+						<section id="three" class="wrapper style3 special">
+							<div class="inner">
+								<header class="major">
+									<h2>My Passions</h2>
+									<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								</header>
+								<ul class="features">
+									<li class="icon fa-paper-plane">
+										<h3>Arcu accumsan</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+									<li class="icon solid fa-laptop">
+										<h3>Ac Augue Eget</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+									<li class="icon solid fa-code">
+										<h3>Mus Scelerisque</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+									<li class="icon solid fa-headphones-alt">
+										<h3>Mauris Imperdiet</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+									<li class="icon fa-heart">
+										<h3>Aenean Primis</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+									<li class="icon fa-flag">
+										<h3>Tortor Ut</h3>
+										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									</li>
+								</ul>
 							</div>
 						</section>
 					</article>
