updated organizations section and BMUN onto about.html

--- a/about.html
+++ b/about.html
@@ -63,9 +63,24 @@
 
 								<hr/>
 
-								<h3>Organizations</h3>
+								<h2>Organizations</h2>
 								<p>Being a key part of something bigger than myself has always been one of the important things in my life. Here are a few organizations I am extremely fortunate to be a part of 
 									during my time at UC Berkeley, due to the amazing experiences I have in them and the truly phenomenal people I get to meet along the way.</p>
+									
+								<h3>Berkeley Model United Nations (BMUN)</h3>
+								<section class="spotlight" style='background-color: #ffffff;'></section>
+								<section class="spotlight" style='background-color: #ffffff;'>
+									<div class="image"><img src="images/organizations/bmun.png" alt="" /></div><div class="content">
+										<p>
+											The oldest Model UN conference in the world, BMUN was founded in 1952 by a small group of students at UC Berkeley. For the better part of a century, BMUN has upheld their legacy through thick and thin. 
+											Today, the BMUN secretariat continues to orchestrate one of the largest Model United Nations conferences in the world, bolstered by our educational mission and outreach initiatives.
+											My role in BMUN is as a Vice-Chair leading crisis-related committees, as well as serving as the Deputy of Merchandise for the Publications Staff.
+										</p>
+
+										<a href="http://www.bmun.org/" target="_blank" class="button primary fit">BMUN Website</a>
+									</div>
+								</section>
+
 							</div>
 						</section>
 
