--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
 								<section class="spotlight" style='background-color: #ffffff;'></section>
 								
 								<section class="spotlight" style='background-color: #ffffff;'>
-                                    <div class="image"><img src="images/companies/lmspace.jpg" height="350" alt="" /></div><div class="content">
+                                    <div class="image"><img src="images/organizations/lmspace.jpg" height="350" alt="" /></div><div class="content">
 										<h2 style="font-size:22px !important;">Lockheed Martin: <br/> Space Systems</h2>
 										<h4><strong><i>Machine Learning and Computer Vision Intern (June - August 2020)</i></strong></h4>
                                         <p>
@@ -68,7 +68,7 @@
 								<br/>
 								
 								<section class="spotlight" style='background-color: #ffffff;'>
-                                    <div class="image"><img src="images/companies/lm.jpg" alt="" /></div><div class="content">
+                                    <div class="image"><img src="images/organizations/lm.jpg" alt="" /></div><div class="content">
 										<!-- <header>
 											<h2 style="font-size:27px !important;">Lockheed Martin: Space Systems</h2>
 											<p>Summer 2019: Software Engineering Intern</p>
