--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="experience.html"><img src="images/companies/lm.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="experience.html"><img src="images/organizations/lm.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="experience.html">Work Experience</a></h2>
 								<p>Nothing is better than being given the chance to apply all your skills to contribute towards something big. 
 									Here are some of the tasks and projects that I worked on during my past internship experiences.</p>
