added icons and changed color theme to about.html, modified some colors on index.html

--- a/about.html
+++ b/about.html
@@ -87,33 +87,34 @@
 						<section id="three" class="wrapper style3 special">
 							<div class="inner">
 								<header class="major">
-									<h2>My Passions</h2>
-									<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+									<h2 style="color:#FDB515">My Passions</h2>
+									<p>As much as I love coding and creating, my passions extend farther than the eye can see.<br/>
+									Here are a few things I take pride in and enjoy doing in my freetime.</p>
 								</header>
+								<!-- flying, drumming, basketball, origami, boy scouts, mun -->
 								<ul class="features">
 									<li class="icon fa-paper-plane">
-										<h3>Arcu accumsan</h3>
+										<h3>Flying</h3>
+										<p>Ever since a young age I've always been interested in the field of aviation. Starting with wind-up balsawood toy planes back in 3th grade, I started flying real Cessna 172s in high school and am currently a solo-certified student pilot.</p>
+									</li>
+									<li class="icon solid fa-drum">
+										<h3>Drumming</h3>
 										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 									</li>
-									<li class="icon solid fa-laptop">
-										<h3>Ac Augue Eget</h3>
+									<li class="icon solid fa-basketball-ball">
+										<h3>Basketball</h3>
 										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 									</li>
-									<li class="icon solid fa-code">
-										<h3>Mus Scelerisque</h3>
+									<li class="icon solid fa-sticky-note">
+										<h3>Origami</h3>
 										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 									</li>
-									<li class="icon solid fa-headphones-alt">
-										<h3>Mauris Imperdiet</h3>
+									<li class="icon solid fa-globe-americas">
+										<h3>United Nations</h3>
 										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 									</li>
-									<li class="icon fa-heart">
-										<h3>Aenean Primis</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-flag">
-										<h3>Tortor Ut</h3>
+									<li class="icon solid fa-flag-usa">
+										<h3>Boy Scouts of America</h3>
 										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 									</li>
 								</ul>
