--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
 							<header class="major">
 								<!-- <h2>Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2> -->
-								<h2>In case we haven't met before...</h2>
+								<h2 style="color:#003262">In case we haven't met before...</h2>
 								<p>Welcome! My name is Ashwat Chidambaram, and I am currently a second-year<br/>
 								at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS).<br/>
 								I am extremeley passionate about the fields of computer science and engineering,<br/>
 								and deeply interested in the applications of robotics and autonomous systems.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon solid fa-microchip major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon solid fa-plane-departure major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon solid fa-microchip major style1" style="color:red"><span class="label">Lorem</span></span></li>
+								<li><span class="icon solid fa-plane-departure major style2" style="color:green"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-code major style3" style="color:blue"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
 					</section>
