updated all information and activities on about.html

--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
 					<article id="main">
 						<header>
 							<h2>About Me</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<p>"We can always kind of be average and do what’s normal. <br/>
+								I’m not in this to do what’s normal." <br/>
+								~ Kobe Bryant</p>
 						</header>
 
 						<section class="wrapper style5">
@@ -95,27 +97,41 @@
 								<ul class="features">
 									<li class="icon fa-paper-plane">
 										<h3>Flying</h3>
-										<p>Ever since a young age I've always been interested in the field of aviation. Starting with wind-up balsawood toy planes back in 3th grade, I started flying real Cessna 172s in high school and am currently a solo-certified student pilot.</p>
+										<p>Ever since a young age I've always been interested in the field of aviation. Starting from the simple and fun wind-up balsawood toy planes back in 3th grade, I eventually grew into starting to fly real Cessna 172s during high school and am currently a solo-certified student pilot
+											I also enjoy flying quadcopters, and even taught quadcopter piloting lessons to audiences at the Hiller Aviation Museum in San Carlos, CA.
+										</p>
 									</li>
 									<li class="icon solid fa-drum">
 										<h3>Drumming</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<p>From the moment I entered my first drum lesson in 2nd grade, I knew I was getting into a whole lot of fun. Drumming has become one of my favorite lifetime hobbies, and I've performed percussion/drum set in Jazz Bands, Symphonic Bands, and Wind Ensembles for about 10 years.
+											Nowadays you can find me casually jamming out on an electronic drum kit back at home, recording drum covers to the latest pop songs which catch my attention on the radio.
+										</p>
 									</li>
 									<li class="icon solid fa-basketball-ball">
 										<h3>Basketball</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<p>Basketball has become a classic sport that I began playing with my friends from when we were tiny 5th graders, and it never gets old to this day as college students. Besides playing recreationally,
+											I also play Intramural Basketball at Cal representing the Berkeley Model United Nations club, and we had a near-perfect season this past semester (until it was sadly cut short due to the pandemic).
+										</p>
 									</li>
 									<li class="icon solid fa-sticky-note">
 										<h3>Origami</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<p>When you start to get bored with writing on paper, you start to fiddle with it. This is pretty much the story of my life. From simple boats and flapping cranes, to intricate turtles and F-16 fighter jets,
+											origami has become a way for me to escape the extremely analytical and quantitative lifestyle of tech/engineering, allowing me to express a more creative and free-thinking aspect of my character and mind.
+										</p>
 									</li>
 									<li class="icon solid fa-globe-americas">
 										<h3>United Nations</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<p>Learning about global issues and international affairs has always been of great interest to me, ever since I started competing in Model United Nations in high school.
+											It allows me to represent different countries, research their history and resources, and learn about how to compromise and work together with other nations while putting our differences aside.
+											I also love to get directly involved, and have previously served as a Delegate at the United Nations Youth Assembly, flying over and attending a conference at the United Nations Headquarters in New York.
+										</p>
 									</li>
 									<li class="icon solid fa-flag-usa">
 										<h3>Boy Scouts of America</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+										<p>From the bottom of my heart, I can truly say that nothing has changed my mindset, personality, and character as much as the Boy Scouts of America. The ideals of teamwork, leadership, and responsibility have been 
+											deeply instilled within me during my 8 years as a Scout. I earned my Eagle Scout rank along with the Bronze, Gold, and Silver Eagle Palms, was inducted in the Order of the Arrow (Boy Scout's Honor Society), and served in over six different
+											leadership roles in my Troop. Once a Scout, always a Scout.
+										</p>
 									</li>
 								</ul>
 							</div>
