--- a/experience.html
+++ b/experience.html
@@ -41,8 +41,9 @@
 					<article id="main">
 						<header>
 							<h2>Work Experience</h2>
-							<p>“Choose a job you love, and you will never have <br/>
-                                to work a day in your life." ~ Confucius</p>
+							<p>“Choose a job you love, and you will <br/> 
+								never have to work a day in your life." <br/> 
+								~ Confucius</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
