--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
 									
 
 								<h3>Ashwat Chidambaram</h3>
-								<p>Born and raised a California native, I'm currently a student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS) as a Regents' and Chancellor's Scholar.
-									I'm constantly exploring new ways to learn anything and everything I can, and ways I can apply those skills to build cool and purposeful things to use.
+								<p>Born and raised a California native, I'm currently a student at UC Berkeley studying Electrical Engineering and Computer Sciences (EECS) as a <a href="https://financialaid.berkeley.edu/regents-and-chancellors-scholarship" target="_blank">Regents' and Chancellor's Scholar.</a>
+									I'm constantly exploring new ways to learn anything and everything I can, and how I can apply those skills to build cool and purposeful things to use.
 									I have a deep interest in pursuing a path which allows me to combine my passions for both software and hardware together, particularly delving into the field of autonomous systems 
-									in order to build safe, reliable, and innovative robotics in the future which will empower humanity. In addition, I have a lot of passions beyond the field of tech, which you can read about below!
+									in order to build safe, reliable, and innovative robotics in the future which will empower humanity. In addition, I have a lot of interests far beyond the field of tech, which you can read about below!
 								</p>
 
 								<!-- Ever since a young age I've always been interested in the field of aviation. From flying wind-up toy balsawood planes in 5th grade, to flying real Cessna-172s during high school, 
@@ -97,8 +97,8 @@
 								<ul class="features">
 									<li class="icon fa-paper-plane">
 										<h3>Flying</h3>
-										<p>Ever since a young age I've always been interested in the field of aviation. Starting from the simple and fun wind-up balsawood toy planes back in 3th grade, I eventually grew into starting to fly real Cessna 172s during high school and am currently a solo-certified student pilot
-											I also enjoy flying quadcopters, and even taught quadcopter piloting lessons to audiences at the Hiller Aviation Museum in San Carlos, CA.
+										<p>Ever since a young age, I've always been interested in the field of aviation. Starting from the fun and simple wind-up balsawood planes back in 3th grade, I eventually grew into flying Cessna 172s during high school, and am currently a solo-certified student pilot.
+											I also enjoy flying quadcopters, and even taught quadcopter piloting lessons to various audiences ranging throughout all ages at the Hiller Aviation Museum in San Carlos, CA.
 										</p>
 									</li>
 									<li class="icon solid fa-drum">
@@ -109,14 +109,14 @@
 									</li>
 									<li class="icon solid fa-basketball-ball">
 										<h3>Basketball</h3>
-										<p>Basketball has become a classic sport that I began playing with my friends from when we were tiny 5th graders, and it never gets old to this day as college students. Besides playing recreationally,
-											I also play Intramural Basketball at Cal representing the Berkeley Model United Nations club, and we had a near-perfect season this past semester (until it was sadly cut short due to the pandemic).
+										<p>Basketball has become a classic sport that I began playing with my friends since we were tiny 5th graders, and it never gets old to this day as college students. Besides playing recreationally,
+											I also play Intramural Basketball at Cal representing the Berkeley Model United Nations (BMUN) club, and we had a near-perfect season this past semester (until it was unfortunately cut short due to the pandemic).
 										</p>
 									</li>
 									<li class="icon solid fa-sticky-note">
 										<h3>Origami</h3>
-										<p>When you start to get bored with writing on paper, you start to fiddle with it. This is pretty much the story of my life. From simple boats and flapping cranes, to intricate turtles and F-16 fighter jets,
-											origami has become a way for me to escape the extremely analytical and quantitative lifestyle of tech/engineering, allowing me to express a more creative and free-thinking aspect of my character and mind.
+										<p>When you start to get bored with writing on paper, you begin to fiddle with it. This is pretty much the story of my life. From simple boats and flapping cranes, to intricate animals and modular planes,
+											origami has become a way for me to escape the extremely analytical and quantitative lifestyle of tech and engineering, allowing me to openly express a more creative and free-thinking aspect of my character and mind.
 										</p>
 									</li>
 									<li class="icon solid fa-globe-americas">
@@ -129,7 +129,7 @@
 									<li class="icon solid fa-flag-usa">
 										<h3>Boy Scouts of America</h3>
 										<p>From the bottom of my heart, I can truly say that nothing has changed my mindset, personality, and character as much as the Boy Scouts of America. The ideals of teamwork, leadership, and responsibility have been 
-											deeply instilled within me during my 8 years as a Scout. I earned my Eagle Scout rank along with the Bronze, Gold, and Silver Eagle Palms, was inducted in the Order of the Arrow (Boy Scout's Honor Society), and served in over six different
+											deeply instilled within me during my 8 years as a Scout. I earned my Eagle Scout rank along with the Bronze, Gold, and Silver Eagle Palms, was inducted into the Order of the Arrow (Boy Scout's Honor Society), and served in over six different
 											leadership roles in my Troop. Once a Scout, always a Scout.
 										</p>
 									</li>
