added icons to buttons, changed icon sizes, added form at bottom of front page

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							aviation enthusiast<br />
 							UC Berkeley, EECS</p>
 							<ul class="icons">
-								<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
-								<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+								<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
 							</ul>
 							<!-- <ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
@@ -103,33 +103,44 @@
 						</section>
 					</section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
+				<!-- Form -->
+					<section class="wrapper style4 special">
+						<h3>Get In Touch!</h3>
+						<br/>
+						<form method="post" action="#">
+							<div class="row gtr-uniform">
+								<div class="col-6 col-12-xsmall">
+									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+								</div>
+								<div class="col-6 col-12-xsmall">
+									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+								</div>
+								<div class="col-12">
+									<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+								</div>
+								<div class="col-12">
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Ashwat Chidambaram</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
-
+		
 			</div>
 
 		<!-- Scripts -->
