--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                                             Both the Gaussian Elimination backend and Web Interface frontend aspects were built using JavaScript, CSS, and HTML5 (utilizing the HTML5 Speech Recognition API).
                                         </p>
 
-                                        <a href="https://github.com/ashwatc/SpeechMatrixSolver" target="_blank" class="button primary fit">GitHub Repository</a>
+                                        <a href="https://github.com/ashwatc/SpeechMatrixSolver" target="_blank" class="button primary fit icon brands fa-github">GitHub Repository</a>
                                     </div>
                                 </section>
 
@@ -76,7 +76,7 @@
                                             This project was submitted to the COVID-19 Design Challenge, hosted by the Jacobs Institute of Design Innovation at UC Berkeley.
                                         </p>
 
-                                        <a href="https://drive.google.com/drive/folders/1-Fl93KvqoYzaufQkWfOkkmXbYk2hEl4n?usp=sharing" target="_blank" class="button primary fit">Presentation and Write-Up</a>
+                                        <a href="https://drive.google.com/drive/folders/1-Fl93KvqoYzaufQkWfOkkmXbYk2hEl4n?usp=sharing" target="_blank" class="button primary fit icon brands fa-google-drive">Presentation and Write-Up</a>
                                     </div>
                                 </section>
 
@@ -90,10 +90,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Ashwat Chidambaram</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
