--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 											My role in BMUN is as a Vice-Chair leading crisis-related committees, as well as serving as the Deputy of Merchandise for the Publications Staff.
 										</p>
 
-										<a href="http://www.bmun.org/" target="_blank" class="button primary fit">BMUN Website</a>
+										<a href="http://www.bmun.org/" target="_blank" class="button primary fit icon solid fa-globe-americas">BMUN Website</a>
 									</div>
 								</section>
 
@@ -141,10 +141,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" target="_blank" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" target="_blank" class="icon fas fa-file-alt fa-lg"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/ashwatc" target="_blank" class="icon brands fa-github fa-lg"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ashchid/" target="_blank" class="icon brands fa-linkedin fa-lg"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:ashwatc@berkeley.edu" target="_blank" class="icon solid fa-envelope fa-lg"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Ashwat Chidambaram</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
