--- a/index.html
+++ b/index.html
@@ -107,24 +107,25 @@
 					<section class="wrapper style4 special">
 						<h3>Get In Touch!</h3>
 						<br/>
-						<form method="post" action="#">
+						<form method="post" action="mailto:ashwatc@berkeley.edu">
 							<div class="row gtr-uniform">
 								<div class="col-6 col-12-xsmall">
-									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+									<input type="text" name="Name:" id="demo-name" value="" placeholder="Name" />
 								</div>
 								<div class="col-6 col-12-xsmall">
-									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+									<input type="email" name="Email:" id="demo-email" value="" placeholder="Email" />
 								</div>
 								<div class="col-12">
-									<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="Message:" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="submit" value="Send Message" class="primary"/></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</div>
 							</div>
+
 						</form>
 					</section>
 
